# factfull

./: .gitignore  CLAUDE.md  README.md  batch_publish.py  main.py  nightly_pipeline.py  pyproject.toml  refine_loop.py  requirements.txt  run.py
config/: arxiv_feeds.yaml  channels.yaml
docs/: architecture.md  bilingual-pipeline.md  roadmap.md  system-architecture.md
factfull/: claim_extractor.py  corrector.py  critique.py  editorial.py  indexer.py  llm.py  registry.py  reporter.py  retriever.py  verifier.py
factfull.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
factfull/arxiv/: digest.py
factfull/bilingual/: __init__.py  extract.py  pipeline.py  segment.py  translate.py  types.py
factfull/book/: chapter_resolver.py  chapter_resolver_react.py  pipeline.py  review_agent.py
factfull/core/: types.py
factfull/export/: arxiv_graph.py  (+2 more)
pipelines/: batch_kg_register.py  bilingual.py  book.py  book_chapters.py  dwarkesh.py  lex.py  local_podcast.py  synthesis.py
scripts/: batch_process.py  e2e_paper.py  e2e_podcast.py  e2e_synthesis.py  e2e_web.py  enrich_bilingual.py  import_homupe.py  import_pluralistic.py  regen_kg_4.py  segment_diag.py
supervisor/: health.py  nightly.env.example  nightly_supervisor.py  notify.py
tests/: test_bilingual_integration.py  test_bilingual_segment.py  test_bilingual_translate.py  test_bilingual_types.py  test_chapter_resolver.py  test_chunker.py  test_core_types.py  test_extract_parse.py  test_ingest.py  test_neo4j_integration.py  test_ollama_integration.py  test_publishers.py  test_speaker_normalization.py
(+41 files in other folders)
