[project]
name = "factfull"
version = "0.1.0"
description = "LLM-based fact-checking and podcast article generation pipeline"
requires-python = ">=3.10"
dependencies = [
    "rank-bm25>=0.2.2",
    "neo4j>=5.0",
    "trafilatura>=1.6",
    "arxiv>=2.1",
    "pymupdf>=1.23",
]

[project.optional-dependencies]
podcast = [
    "youtube-transcript-api>=0.6.0",
    "youtube-comment-downloader>=0.1.68",
]
anthropic = [
    "anthropic>=0.40.0",
]
diarize = [
    "pyannote.audio>=3.1",
    "yt-dlp>=2024.1.0",
    "torch>=2.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["factfull*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
